// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartAxes snapshot renders 1`] = `
<RawChartAxes
  className="className"
  classes={
    Object {
      "axis": "RawChartAxes-axis-2",
      "axisLabel": "RawChartAxes-axisLabel-1",
      "axisLine": "RawChartAxes-axisLine-3",
      "dottedLine": "RawChartAxes-dottedLine-5",
      "tick": "RawChartAxes-tick-4",
    }
  }
  graphProps={
    Object {
      "domain": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "range": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "scale": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
      "size": Object {
        "height": 400,
        "width": 400,
      },
      "snap": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
    }
  }
  xBand={
    Object {
      "bandwidth": [Function],
    }
  }
/>
`;

exports[`TickComponent snapshot renders 1`] = `""`;

exports[`TickComponent snapshot1 renders 1`] = `
<g>
  <foreignObject
    height={24}
    style={
      Object {
        "overflow": "visible",
        "pointerEvents": "none",
      }
    }
    x={NaN}
    y={6}
  >
    <WithStyles(MarkLabel)
      disabled={true}
      graphProps={
        Object {
          "domain": Object {
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "range": Object {
            "max": 1,
            "min": 0,
            "step": 1,
          },
          "scale": Object {
            "x": [MockFunction],
            "y": [MockFunction],
          },
          "size": Object {
            "height": 400,
            "width": 400,
          },
          "snap": Object {
            "x": [MockFunction],
            "y": [MockFunction],
          },
        }
      }
      inputRef={[Function]}
      mark={
        Object {
          "label": "test",
          "value": 1,
        }
      }
      onChange={[Function]}
    />
  </foreignObject>
</g>
`;
